Add bell and sound feature

--- a/index.html
+++ b/index.html
@@ -24,6 +24,7 @@
             <a class="fa-solid fa-rotate-right" onclick="reset()"></a>
             <a class="fa-solid fa-moon" onclick="relax()"></a>
             <a class="fa-solid fa-rotate" onclick="loop()"></a>
+            <a class="fa-regular fa-bell" id="bell" onclick="toggleBell()"></a>
         </div>
     </div>
 </body>
