--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
         <div class="utils">
             <a class="fa-solid fa-play" onclick="start()"></a>
             <a class="fa-solid fa-rotate-right" onclick="reset()"></a>
-            <a class="fa-solid fa-moon" onclick="relax()"></a>
+            <a class="fa-solid fa-seedling" onclick="relax()"></a>
             <a class="fa-solid fa-rotate" onclick="loop()"></a>
             <a class="fa-regular fa-bell" id="bell" onclick="toggleBell()"></a>
         </div>
