Add pause functionality, and remove loop icon

--- a/index.html
+++ b/index.html
@@ -20,10 +20,9 @@
         </div>
         
         <div class="utils">
-            <a class="fa-solid fa-play" onclick="start()"></a>
+            <a class="fa-solid fa-play" id="play" onclick="start()"></a>
             <a class="fa-solid fa-rotate-right" onclick="reset()"></a>
             <a class="fa-solid fa-seedling" onclick="relax()"></a>
-            <a class="fa-solid fa-rotate" onclick="loop()"></a>
             <a class="fa-regular fa-bell" id="bell" onclick="toggleBell()"></a>
         </div>
     </div>
