--- a/index.html
+++ b/index.html
@@ -14,14 +14,15 @@
 <body>
     <div class="main">
         <div class="timer">
-            <a class="fa-solid fa-minus hide" onclick="decreaseTime()"></a>
+            <a class="fa-solid fa-minus" onclick="decreaseTime()"></a>
             <p id="time" class="prevent-select"></p>
-            <a class="fa-solid fa-plus hide" onclick="increaseTime()"></a>
+            <a class="fa-solid fa-plus" onclick="increaseTime()"></a>
         </div>
         
         <div class="utils">
             <a class="fa-solid fa-play" id="play" onclick="start()"></a>
             <a class="fa-solid fa-rotate-right" onclick="reset()"></a>
+            <a class="fa-solid fa-stopwatch" onclick="stopwatch()""></a>
             <a class="fa-solid fa-seedling" onclick="relax()"></a>
             <a class="fa-regular fa-bell" id="bell" onclick="toggleBell()"></a>
         </div>
