--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
             <a class="fa-solid fa-rotate-right" onclick="reset()"></a>
             <a class="fa-solid fa-stopwatch" onclick="stopwatch()""></a>
             <a class="fa-solid fa-seedling" onclick="relax()"></a>
-            <a class="fa-regular fa-bell" id="bell" onclick="toggleBell()"></a>
+            <a class="fa-solid fa-bell" id="bell" onclick="toggleBell()"></a>
         </div>
     </div>
 </body>
