Add show keyboard shortcuts, refactor code

--- a/index.html
+++ b/index.html
@@ -33,6 +33,45 @@
             <a class="fa-solid fa-bell" id="bell" onclick="toggleBell()"></a>
         </div>
     </div>
+    <div id="shortcutOverlay">
+        <div class="shortcut-container">
+            <h3>Keyboard Shortcuts</h3>
+            <ul class="shortcut-list">
+                <li>
+                    <span class="shortcut-key">- / j</span>
+                    <span class="shortcut-description">Decrease timer</span>
+                </li>
+                <li>
+                    <span class="shortcut-key">+ / = / k</span>
+                    <span class="shortcut-description">Increase timer</span>
+                </li>
+                <li>
+                    <span class="shortcut-key">space</span>
+                    <span class="shortcut-description">Play/Pause timer</span>
+                </li>
+                <li>
+                    <span class="shortcut-key">r</span>
+                    <span class="shortcut-description">Reset timer</span>
+                </li>
+                <li>
+                    <span class="shortcut-key">s</span>
+                    <span class="shortcut-description">Stopwatch</span>
+                </li>
+                <li>
+                    <span class="shortcut-key">b</span>
+                    <span class="shortcut-description">Take a break</span>
+                </li>
+                <li>
+                    <span class="shortcut-key">a</span>
+                    <span class="shortcut-description">Toggle alarm</span>
+                </li>
+                <li>
+                    <span class="shortcut-key">?</span>
+                    <span class="shortcut-description">Show this</span>
+                </li>
+            </ul>
+        </div>
+    </div>
 </body>
 <script src="script.js"></script>
 </html>
