Add esc keyboard shortcut

--- a/index.html
+++ b/index.html
@@ -69,6 +69,10 @@
                     <span class="shortcut-key">?</span>
                     <span class="shortcut-description">Show this</span>
                 </li>
+                <li>
+                    <span class="shortcut-key">Esc</span>
+                    <span class="shortcut-description">Close this</span>
+                </li>
             </ul>
         </div>
     </div>
