--- a/index.html
+++ b/index.html
@@ -38,40 +38,40 @@
             <h3>Keyboard Shortcuts</h3>
             <ul class="shortcut-list">
                 <li>
-                    <span class="shortcut-key">- / j</span>
-                    <span class="shortcut-description">Decrease timer</span>
+                    <span class="key">- / j</span>
+                    <span>Decrease timer</span>
                 </li>
                 <li>
-                    <span class="shortcut-key">+ / = / k</span>
-                    <span class="shortcut-description">Increase timer</span>
+                    <span class="key">+ / = / k</span>
+                    <span>Increase timer</span>
                 </li>
                 <li>
-                    <span class="shortcut-key">space</span>
-                    <span class="shortcut-description">Play/Pause timer</span>
+                    <span class="key">space</span>
+                    <span>Play/Pause timer</span>
                 </li>
                 <li>
-                    <span class="shortcut-key">r</span>
-                    <span class="shortcut-description">Reset timer</span>
+                    <span class="key">r</span>
+                    <span>Reset timer</span>
                 </li>
                 <li>
-                    <span class="shortcut-key">s</span>
-                    <span class="shortcut-description">Stopwatch</span>
+                    <span class="key">s</span>
+                    <span>Stopwatch</span>
                 </li>
                 <li>
-                    <span class="shortcut-key">b</span>
-                    <span class="shortcut-description">Take a break</span>
+                    <span class="key">b</span>
+                    <span>Take a break</span>
                 </li>
                 <li>
-                    <span class="shortcut-key">a</span>
-                    <span class="shortcut-description">Toggle alarm</span>
+                    <span class="key">a</span>
+                    <span>Toggle alarm</span>
                 </li>
                 <li>
-                    <span class="shortcut-key">?</span>
-                    <span class="shortcut-description">Show this</span>
+                    <span class="key">?</span>
+                    <span>Show this</span>
                 </li>
                 <li>
-                    <span class="shortcut-key">Esc</span>
-                    <span class="shortcut-description">Close this</span>
+                    <span class="key">Esc</span>
+                    <span>Close this</span>
                 </li>
             </ul>
         </div>
